add: setup with main block

--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
 </head>
 
 <body>
+    <div class="app">
+        <!-- Header -->
+        <header>
 
+        </header>
+        <!-- /Header -->
+
+        <!-- Main -->
+        <main>
+            <!-- SideBar -->
+            <section class="ms_sidebar">
+
+            </section>
+            <!-- /SideBar -->
+
+            <!-- Main Content -->
+            <section class="ms_main-content">
+
+            </section>
+            <!-- /Main Content -->
+        </main>
+        <!-- /Main -->
+    </div>
 </body>
 
 </html>
