--- a/index.html
+++ b/index.html
@@ -31,16 +31,25 @@
                     <!-- /Logos -->
                     <div class="col flex-grow-1">
                         <div class="ms_search-bar">
-                            <button type="submit" class="ms_search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
-                            <input type="text" placeholder="Prova a cercare: Lezioni di Laravel">                 
+                            <button type="submit" class="ms_search-button"><i
+                                    class="fa-solid fa-magnifying-glass"></i></button>
+                            <input type="text" placeholder="Prova a cercare: Lezioni di Laravel">
                         </div>
                     </div>
                     <div class="col">
                         <ul class="list-unstyled d-flex m-0">
-                            <li><button><i class="fa-solid fa-bell"></i></button></li>
-                            <li class="d-none d-lg-block"><button><i class="fa-solid fa-ellipsis-vertical"></i></button></li>
-                            <li class="d-none d-lg-block"><button><i class="fa-solid fa-circle-question"></i></button></li>
-                            <li class="d-none d-lg-block"><button><i class="fa-solid fa-bars"></i></button></li>
+                            <li class="d-none d-lg-block">
+                                <button><i class="fa-solid fa-bars"></i></button>
+                            </li>
+                            <li class="d-none d-lg-block">
+                                <button><i class="fa-solid fa-circle-question"></i></button>
+                            </li>
+                            <li class="d-none d-lg-block">
+                                <button><i class="fa-solid fa-ellipsis-vertical"></i></button>
+                            </li>
+                            <li>
+                                <button><i class="fa-solid fa-bell"></i></button>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -51,8 +60,38 @@
         <!-- Main -->
         <main>
             <!-- SideBar -->
-            <section class="ms_sidebar">
+            <section class="ms_sidebar py-3">
+                <div class="d-flex flex-column justify-content-between h-100">
+                    <ul>
+                        <li>
+                            <ul class="d-flex align-items-center justify-content-center">
+                                <li><button><i class="fa-solid fa-house"></i></button></li>
+                                <li class="d-none d-lg-block">Home</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="d-flex align-items-center justify-content-center">
+                                <li><button><i class="fa-solid fa-chart-simple"></i></button></li>
+                                <li class="d-none d-lg-block">Stats</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="d-flex align-items-center justify-content-center">
+                                <li><button><i class="fa-solid fa-signal"></i></button></li>
+                                <li class="d-none d-lg-block">Signals</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <ul class="d-flex align-items-center justify-content-center">
+                                <li><button><i class="fa-solid fa-gear"></i></button></li>
+                                <li class="d-none d-lg-block">Admin</li>
+                            </ul>
+                        </li>
+                    </ul>
 
+                </div>
             </section>
             <!-- /SideBar -->
 
