--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
                 <div class="row row-cols-3 bg-white align-items-center">
                     <!-- Logos -->
-                    <div class="col">
+                    <div class="col-auto">
                         <img class="ms_header-logos d-lg-none" src="img/mobile-logo.png" alt="Logo for mobile">
                         <img class="ms_header-logos d-none d-lg-block" src="img/logo.svg" alt="Logo for desktop">
                     </div>
@@ -36,7 +36,7 @@
                             <input type="text" placeholder="Prova a cercare: Lezioni di Laravel">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <ul class="list-unstyled d-flex m-0">
                             <li class="d-none d-lg-block">
                                 <button><i class="fa-solid fa-bars"></i></button>
