refactoring: root for sidebar in mediaquery

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Header -->
         <header class="d-flex align-items-center">
             <div class="container-fluid">
-                <div class="row row-cols-3 bg-white align-items-center">
+                <div class="row row-cols-3 align-items-center bg-white">
                     <!-- Logos -->
                     <div class="col-auto">
                         <img class="ms_header-logos d-lg-none" src="img/mobile-logo.png" alt="Logo for mobile">
