--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Header -->
         <header class="d-flex align-items-center">
             <div class="container-fluid">
-                <div class="row row-cols-3 align-items-center bg-white">
+                <div class="row align-items-center bg-white">
                     <!-- Logos -->
                     <div class="col-auto">
                         <img class="ms_header-logos d-lg-none" src="img/mobile-logo.png" alt="Logo for mobile">
@@ -30,9 +30,10 @@
                     </div>
                     <!-- /Logos -->
                     <div class="col flex-grow-1">
-                        <div class="ms_search-bar">
-                            <button type="submit" class="ms_search-button"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
+                        <div class="ms_search-bar d-flex p-1 rounded">
+                            <button type="submit" class="ms_search-button">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
                             <input type="text" placeholder="Prova a cercare: Lezioni di Laravel">
                         </div>
                     </div>
