add:dashboard in main content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <!-- /Logos -->
                     <div class="col flex-grow-1">
-                        <div class="ms_search-bar d-flex p-1 rounded">
+                        <div class="ms_search-bar d-flex rounded p-1">
                             <button type="submit" class="ms_search-button">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </button>
@@ -98,7 +98,50 @@
 
             <!-- Main Content -->
             <section class="ms_main-content">
-
+                <div class="ms_dashboard">
+                    <div class="container-fluid">
+                        <div class="row row-cols-1 row-cols-md-3 py-3">
+                            <div class="col-auto order-md-last">
+                                <p class="d-inline-block me-3">Nuovo Studente</p>
+                                <button type="button" class="btn btn-outline-light"><i
+                                        class="fa-solid fa-plus"></i></button>
+                            </div>
+                            <!-- Section with link button -->
+                            <div class="col order-md-first flex-md-grow-1">
+                                <div class="d-flex align-items-baseline ">
+                                    <p class="fs-1 me-2 mb-0">Boolean</p>
+                                    <a class="btn ms_btn-primary rounded-pill" href="#" role="button">Piano blaze</a>
+                                </div>
+                                <!-- 3 App -->
+                                <div class="ms_3-app d-flex align-items-center">
+                                    <a class="btn ms_btn-primary rounded-pill" href="#" role="button">3 app</a>
+                                    <span><i class="fa-solid fa-angles-right"></i></span>
+                                    <a class="btn ms_btn-primary rounded-pill d-xl-none" href="#" role="button"><i
+                                            class="fa-solid fa-plus"></i></a>
+                                    <ul class="m-0 list-unstyled d-none d-xl-flex">
+                                        <li>
+                                            <a class="btn ms_btn-primary rounded-pill" href="#" role="button">Boolean
+                                                mobile app</a>
+                                        </li>
+                                        <li>
+                                            <a class="btn ms_btn-primary rounded-pill" href="#" role="button">Boolean
+                                                web app</a>
+                                        </li>
+                                        <li>
+                                            <a class="btn ms_btn-primary rounded-pill" href="#" role="button">Boolean
+                                                blog app</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- /Section with link button -->
+                            <div class="col">
+                                <p>Studenti negli ultimi 30 minuti</p>
+                                <p clasS="fs-3">125</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <!-- /Main Content -->
         </main>
